First commited as before_39345_rev1