@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2006, 2015 IBM Corporation and others.
+ * Copyright (c) 2006, 2009 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -8,13 +8,11 @@
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *     Matthew Hall - bugs 208332, 265727
- *     Stefan Xenos <sxenos@gmail.com> - Bug 335792
  *******************************************************************************/
 
 package org.eclipse.core.databinding.observable.set;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -22,7 +20,6 @@ import java.util.Iterator;
 import java.util.Set;
 
 import org.eclipse.core.databinding.observable.Diffs;
-import org.eclipse.core.databinding.observable.IObservable;
 import org.eclipse.core.databinding.observable.Realm;
 import org.eclipse.core.internal.databinding.observable.IStalenessConsumer;
 import org.eclipse.core.internal.databinding.observable.StalenessTracker;
@@ -31,23 +28,21 @@ import org.eclipse.core.internal.databinding.observable.StalenessTracker;
  * Represents a set consisting of the union of elements from one or more other
  * sets. This object does not need to be explicitly disposed. If nobody is
  * listening to the UnionSet, the set will remove its listeners.
- *
+ * 
  * <p>
  * This class is thread safe. All state accessing methods must be invoked from
  * the {@link Realm#isCurrent() current realm}. Methods for adding and removing
  * listeners may be invoked from any thread.
  * </p>
- *
- * @param <E>
- *            type of the elements in the union set
+ * 
  * @since 1.0
  */
-public final class UnionSet<E> extends ObservableSet<E> {
+public final class UnionSet extends ObservableSet {
 
 	/**
 	 * child sets
 	 */
-	private Set<IObservableSet<? extends E>> childSets;
+	private IObservableSet[] childSets;
 
 	private boolean stale = false;
 
@@ -56,23 +51,15 @@ public final class UnionSet<E> extends ObservableSet<E> {
 	 * when the first listener is added to the union set. Null if nobody is
 	 * listening to the UnionSet.
 	 */
-	private HashMap<E, Integer> refCounts = null;
+	private HashMap refCounts = null;
 
 	private StalenessTracker stalenessTracker;
 
 	/**
 	 * @param childSets
 	 */
-	public UnionSet(IObservableSet<? extends E>[] childSets) {
-		this(new HashSet<IObservableSet<? extends E>>(Arrays.asList(childSets)));
-	}
-
-	/**
-	 * @param childSets
-	 * @since 1.6
-	 */
-	public UnionSet(Set<IObservableSet<? extends E>> childSets) {
-		this(childSets, childSets.iterator().next().getElementType());
+	public UnionSet(IObservableSet[] childSets) {
+		this(childSets, childSets[0].getElementType());
 	}
 
 	/**
@@ -80,26 +67,20 @@ public final class UnionSet<E> extends ObservableSet<E> {
 	 * @param elementType
 	 * @since 1.2
 	 */
-	public UnionSet(IObservableSet<? extends E>[] childSets, Object elementType) {
-		this(new HashSet<IObservableSet<? extends E>>(Arrays.asList(childSets)), elementType);
+	public UnionSet(IObservableSet[] childSets, Object elementType) {
+		super(childSets[0].getRealm(), null, elementType);
+		System.arraycopy(childSets, 0,
+				this.childSets = new IObservableSet[childSets.length], 0,
+				childSets.length);
+		this.stalenessTracker = new StalenessTracker(childSets,
+				stalenessConsumer);
 	}
 
-	/**
-	 * @param childSets
-	 * @param elementType
-	 * @since 1.6
-	 */
-	public UnionSet(Set<IObservableSet<? extends E>> childSets, Object elementType) {
-		super(childSets.iterator().next().getRealm(), null, elementType);
-		this.childSets = childSets;
-
-		this.stalenessTracker = new StalenessTracker(childSets.toArray(new IObservableSet[0]), stalenessConsumer);
-	}
-
-	private ISetChangeListener<E> childSetChangeListener = new ISetChangeListener<E>() {
+	private ISetChangeListener childSetChangeListener = new ISetChangeListener() {
 		@Override
-		public void handleSetChange(SetChangeEvent<? extends E> event) {
-			processAddsAndRemoves(event.diff.getAdditions(), event.diff.getRemovals());
+		public void handleSetChange(SetChangeEvent event) {
+			processAddsAndRemoves(event.diff.getAdditions(), event.diff
+					.getRemovals());
 		}
 	};
 
@@ -121,7 +102,9 @@ public final class UnionSet<E> extends ObservableSet<E> {
 			return stale;
 		}
 
-		for (IObservableSet<? extends E> childSet : childSets) {
+		for (int i = 0; i < childSets.length; i++) {
+			IObservableSet childSet = childSets[i];
+
 			if (childSet.isStale()) {
 				return true;
 			}
@@ -129,35 +112,35 @@ public final class UnionSet<E> extends ObservableSet<E> {
 		return false;
 	}
 
-	private void processAddsAndRemoves(Set<? extends E> adds, Set<? extends E> removes) {
-		Set<E> addsToFire = new HashSet<>();
-		Set<E> removesToFire = new HashSet<>();
+	private void processAddsAndRemoves(Set adds, Set removes) {
+		Set addsToFire = new HashSet();
+		Set removesToFire = new HashSet();
 
-		for (Iterator<? extends E> iter = adds.iterator(); iter.hasNext();) {
-			E added = iter.next();
+		for (Iterator iter = adds.iterator(); iter.hasNext();) {
+			Object added = iter.next();
 
-			Integer refCount = refCounts.get(added);
+			Integer refCount = (Integer) refCounts.get(added);
 			if (refCount == null) {
-				refCounts.put(added, Integer.valueOf(1));
+				refCounts.put(added, new Integer(1));
 				addsToFire.add(added);
 			} else {
 				int refs = refCount.intValue();
-				refCount = Integer.valueOf(refs + 1);
+				refCount = new Integer(refs + 1);
 				refCounts.put(added, refCount);
 			}
 		}
 
-		for (Iterator<? extends E> iter = removes.iterator(); iter.hasNext();) {
-			E removed = iter.next();
+		for (Iterator iter = removes.iterator(); iter.hasNext();) {
+			Object removed = iter.next();
 
-			Integer refCount = refCounts.get(removed);
+			Integer refCount = (Integer) refCounts.get(removed);
 			if (refCount != null) {
 				int refs = refCount.intValue();
 				if (refs <= 1) {
 					removesToFire.add(removed);
 					refCounts.remove(removed);
 				} else {
-					refCount = Integer.valueOf(refCount.intValue() - 1);
+					refCount = new Integer(refCount.intValue() - 1);
 					refCounts.put(removed, refCount);
 				}
 			}
@@ -175,13 +158,13 @@ public final class UnionSet<E> extends ObservableSet<E> {
 	protected void firstListenerAdded() {
 		super.firstListenerAdded();
 
-		refCounts = new HashMap<>();
-		for (IObservableSet<? extends E> childSet : childSets) {
-			childSet.addSetChangeListener(childSetChangeListener);
-			incrementRefCounts(childSet);
+		refCounts = new HashMap();
+		for (int i = 0; i < childSets.length; i++) {
+			IObservableSet next = childSets[i];
+			next.addSetChangeListener(childSetChangeListener);
+			incrementRefCounts(next);
 		}
-		stalenessTracker = new StalenessTracker(
-				childSets.toArray(new IObservable[0]), stalenessConsumer);
+		stalenessTracker = new StalenessTracker(childSets, stalenessConsumer);
 		setWrappedSet(refCounts.keySet());
 	}
 
@@ -189,28 +172,30 @@ public final class UnionSet<E> extends ObservableSet<E> {
 	protected void lastListenerRemoved() {
 		super.lastListenerRemoved();
 
-		for (IObservableSet<? extends E> childSet : childSets) {
-			childSet.removeSetChangeListener(childSetChangeListener);
-			stalenessTracker.removeObservable(childSet);
+		for (int i = 0; i < childSets.length; i++) {
+			IObservableSet next = childSets[i];
+
+			next.removeSetChangeListener(childSetChangeListener);
+			stalenessTracker.removeObservable(next);
 		}
 		refCounts = null;
 		stalenessTracker = null;
 		setWrappedSet(null);
 	}
 
-	private ArrayList<E> incrementRefCounts(Collection<? extends E> added) {
-		ArrayList<E> adds = new ArrayList<>();
+	private ArrayList incrementRefCounts(Collection added) {
+		ArrayList adds = new ArrayList();
 
-		for (Iterator<? extends E> iter = added.iterator(); iter.hasNext();) {
-			E next = iter.next();
+		for (Iterator iter = added.iterator(); iter.hasNext();) {
+			Object next = iter.next();
 
-			Integer refCount = refCounts.get(next);
+			Integer refCount = (Integer) refCounts.get(next);
 			if (refCount == null) {
 				adds.add(next);
-				refCount = Integer.valueOf(1);
+				refCount = new Integer(1);
 				refCounts.put(next, refCount);
 			} else {
-				refCount = Integer.valueOf(refCount.intValue() + 1);
+				refCount = new Integer(refCount.intValue() + 1);
 				refCounts.put(next, refCount);
 			}
 		}
@@ -226,12 +211,12 @@ public final class UnionSet<E> extends ObservableSet<E> {
 		}
 	}
 
-	private Set<E> computeElements() {
+	private Set computeElements() {
 		// If there is no cached value, compute the union from scratch
 		if (refCounts == null) {
-			Set<E> result = new HashSet<>();
-			for (IObservableSet<? extends E> childSet : childSets) {
-				result.addAll(childSet);
+			Set result = new HashSet();
+			for (int i = 0; i < childSets.length; i++) {
+				result.addAll(childSets[i]);
 			}
 			return result;
 		}
