@@ -1,19 +1,16 @@
  /****************************************************************************
-* Copyright (c) 2000, 2016 IBM Corporation and others.
-* All rights reserved. This program and the accompanying materials
-* are made available under the terms of the Eclipse Public License v1.0
-* which accompanies this distribution, and is available at
-* http://www.eclipse.org/legal/epl-v10.html
-*
-* Contributors:
-*     IBM Corporation - initial API and implementation
-*     Dina Sayed, dsayed@eg.ibm.com, IBM -  bug 269844
-*     Markus Schorn (Wind River Systems) -  bug 284447
-*     James Blackburn (Broadcom Corp.)   -  bug 340978
-*     Lars Vogel <Lars.Vogel@vogella.com> - Bug 458832
-*     Christian Georgi (SAP SE)          -  bug 458811
-*     Mickael Istria (Red Hat Inc.) - Bug 486901
-*******************************************************************************/
+ * Copyright (c) 2000, 2014 IBM Corporation and others.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
+ *
+ * Contributors:
+ *     IBM Corporation - initial API and implementation
+ *     Dina Sayed, dsayed@eg.ibm.com, IBM -  bug 269844
+ *     Markus Schorn (Wind River Systems) -  bug 284447
+ *     James Blackburn (Broadcom Corp.)   -  bug 340978
+ *******************************************************************************/
 package org.eclipse.ui.internal.ide.dialogs;
 
 import java.util.Collections;
@@ -24,10 +21,9 @@ import org.eclipse.core.resources.ResourcesPlugin;
 import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.Platform;
 import org.eclipse.core.runtime.Preferences;
-import org.eclipse.e4.core.contexts.IEclipseContext;
-import org.eclipse.e4.ui.internal.workbench.E4Workbench;
 import org.eclipse.jface.layout.GridDataFactory;
 import org.eclipse.jface.layout.GridLayoutFactory;
+import org.eclipse.jface.preference.BooleanFieldEditor;
 import org.eclipse.jface.preference.FieldEditor;
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.preference.IntegerFieldEditor;
@@ -35,8 +31,9 @@ import org.eclipse.jface.preference.PreferencePage;
 import org.eclipse.jface.preference.RadioGroupFieldEditor;
 import org.eclipse.jface.preference.StringFieldEditor;
 import org.eclipse.jface.util.BidiUtils;
+import org.eclipse.jface.util.IPropertyChangeListener;
+import org.eclipse.jface.util.PropertyChangeEvent;
 import org.eclipse.osgi.util.NLS;
-import org.eclipse.osgi.util.TextProcessor;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.layout.GridData;
 import org.eclipse.swt.layout.GridLayout;
@@ -51,7 +48,6 @@ import org.eclipse.ui.WorkbenchEncoding;
 import org.eclipse.ui.dialogs.PreferenceLinkArea;
 import org.eclipse.ui.ide.IDEEncoding;
 import org.eclipse.ui.ide.dialogs.ResourceEncodingFieldEditor;
-import org.eclipse.ui.internal.WorkbenchMessages;
 import org.eclipse.ui.internal.ide.IDEInternalPreferences;
 import org.eclipse.ui.internal.ide.IDEWorkbenchMessages;
 import org.eclipse.ui.internal.ide.IDEWorkbenchPlugin;
@@ -66,9 +62,8 @@ import org.eclipse.ui.preferences.IWorkbenchPreferenceContainer;
  *Note:This class extends from PreferencePage,and there's no WorkspacePreferencePage class.
  *Hence when the IDE settings doesn't appear in this preference page, this page will be empty.
  */
-public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkbenchPreferencePage {
-
-	private IEclipseContext e4Context;
+public class IDEWorkspacePreferencePage extends PreferencePage
+        implements IWorkbenchPreferencePage{
 
 	private Button autoBuildButton;
 
@@ -77,7 +72,7 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
     private IntegerFieldEditor saveInterval;
 
 	private FieldEditor workspaceName;
-	private Button showLocationInWindowTitle;
+	private FieldEditor showLocationInWindowTitle;
 
 	private Button autoRefreshButton;
 
@@ -88,7 +83,7 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
 	private ResourceEncodingFieldEditor encodingEditor;
 
 	private LineDelimiterEditor lineSeparatorEditor;
-
+	
     //A boolean to indicate if the user settings were cleared.
 	private boolean clearUserSettings = false;
 
@@ -117,30 +112,30 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
         createSaveAllBeforeBuildPref(composite);
         createCloseUnrelatedProjPrefControls(composite);
 
-		createSpace(composite);
-		createSaveIntervalGroup(composite);
-		createWindowTitleGroup(composite);
-
-		createSpace(composite);
+        createSpace(composite);
 		createWorkspaceLocationGroup(composite);
 
 		createSpace(composite);
+        createSaveIntervalGroup(composite);
+        createWindowTitleGroup(composite);
+		createSpace(composite);
+		
 		createOpenPrefControls(composite);
 
 		createSpace(composite);
 		createSystemExplorerGroup(composite);
 		createSpace(composite);
-
+		
 		Composite lower = new Composite(composite,SWT.NONE);
 		GridLayout lowerLayout = new GridLayout();
 		lowerLayout.marginWidth = 0;
 		lowerLayout.numColumns = 2;
 		lowerLayout.makeColumnsEqualWidth = true;
 		lower.setLayout(lowerLayout);
-
+		
 		lower.setLayoutData(new GridData(
                 GridData.HORIZONTAL_ALIGN_FILL | GridData.GRAB_HORIZONTAL));
-
+		
 		createEncodingEditorControls(lower);
 		createLineSeparatorEditorControls(lower);
 		applyDialogFont(composite);
@@ -210,32 +205,26 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
 		GridDataFactory.fillDefaults().align(SWT.BEGINNING, SWT.CENTER).applyTo(locationLabel);
 		Text workspacePath = new Text(groupComposite, SWT.READ_ONLY);
 		workspacePath.setBackground(workspacePath.getDisplay().getSystemColor(SWT.COLOR_WIDGET_BACKGROUND));
-		workspacePath.setText(TextProcessor.process(Platform.getLocation().toOSString()));
+		workspacePath.setText(Platform.getLocation().toOSString());
+		workspacePath.setToolTipText(workspacePath.getText());
 		workspacePath.setSelection(workspacePath.getText().length());
 		GridDataFactory.fillDefaults().align(SWT.FILL, SWT.CENTER).grab(true, false)
 				.hint(convertHorizontalDLUsToPixels(200), SWT.DEFAULT).applyTo(workspacePath);
 
-		// show workspace location in window title
-		boolean showLocationIsSetOnCommandLine = e4Context.containsKey(E4Workbench.FORCED_SHOW_LOCATION);
-		showLocationInWindowTitle = new Button(groupComposite, SWT.CHECK);
-		showLocationInWindowTitle.setText(IDEWorkbenchMessages.IDEWorkspacePreference_showLocationInWindowTitle);
-		showLocationInWindowTitle.setSelection(showLocationIsSetOnCommandLine
-				|| getIDEPreferenceStore().getBoolean(IDEInternalPreferences.SHOW_LOCATION));
-		showLocationInWindowTitle.setEnabled(!showLocationIsSetOnCommandLine);
-		GridDataFactory.fillDefaults().grab(true, false).span(2, 1).applyTo(showLocationInWindowTitle);
-
-		if (showLocationIsSetOnCommandLine) {
-			Composite noteComposite = createNoteComposite(composite.getFont(), groupComposite,
-					WorkbenchMessages.Preference_note,
-					IDEWorkbenchMessages.IDEWorkspacePreference_showLocationInWindowTitle_lockedByCommandLine);
-			GridDataFactory.fillDefaults().grab(true, false).span(2, 1).applyTo(noteComposite);
-		}
+		Composite showLocationComposite = new Composite(composite, SWT.LEFT);
+		GridDataFactory.fillDefaults().grab(true, false).applyTo(showLocationComposite);
+		GridLayoutFactory.fillDefaults().applyTo(showLocationComposite);
+		showLocationInWindowTitle = new BooleanFieldEditor(IDEInternalPreferences.SHOW_LOCATION,
+				IDEWorkbenchMessages.IDEWorkspacePreference_showLocationInWindowTitle, showLocationComposite);
+		showLocationInWindowTitle.setPage(this);
+		showLocationInWindowTitle.setPreferenceStore(getIDEPreferenceStore());
+		showLocationInWindowTitle.load();
 	}
 
     /**
      * Create a composite that contains entry fields specifying save interval
      * preference.
-     *
+     * 
      * @param composite the Composite the group is created in.
      */
     private void createSaveIntervalGroup(Composite composite) {
@@ -259,8 +248,7 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
         saveInterval.setPage(this);
         saveInterval.setTextLimit(Integer.toString(
                 IDEInternalPreferences.MAX_SAVE_INTERVAL).length());
-		saveInterval.setErrorMessage(NLS.bind(IDEWorkbenchMessages.WorkbenchPreference_saveIntervalError,
-				Integer.valueOf(IDEInternalPreferences.MAX_SAVE_INTERVAL)));
+        saveInterval.setErrorMessage(NLS.bind(IDEWorkbenchMessages.WorkbenchPreference_saveIntervalError, new Integer(IDEInternalPreferences.MAX_SAVE_INTERVAL)));
         saveInterval
                 .setValidateStrategy(StringFieldEditor.VALIDATE_ON_KEY_STROKE);
         saveInterval.setValidRange(1, IDEInternalPreferences.MAX_SAVE_INTERVAL);
@@ -270,18 +258,22 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
         long interval = description.getSnapshotInterval() / 60000;
         saveInterval.setStringValue(Long.toString(interval));
 
-        saveInterval.setPropertyChangeListener(event -> {
-		    if (event.getProperty().equals(FieldEditor.IS_VALID)) {
-				setValid(saveInterval.isValid());
-			}
-		});
+        saveInterval.setPropertyChangeListener(new IPropertyChangeListener() {
+
+            @Override
+			public void propertyChange(PropertyChangeEvent event) {
+                if (event.getProperty().equals(FieldEditor.IS_VALID)) {
+					setValid(saveInterval.isValid());
+				}
+            }
+        });
 
     }
 
     /**
      * Create a composite that contains entry fields specifying the workspace name
      * preference.
-     *
+     * 
      * @param composite the Composite the group is created in.
      */
     private void createWindowTitleGroup(Composite composite) {
@@ -304,10 +296,10 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
     }
 
 	/**
-	 * Create the Refresh controls
-	 *
-	 * @param parent
-	 */
+     * Create the Refresh controls
+     * 
+     * @param parent
+     */
     private void createAutoRefreshControls(Composite parent) {
 
         this.autoRefreshButton = new Button(parent, SWT.CHECK);
@@ -318,42 +310,47 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
         this.lightweightRefreshButton.setText(IDEWorkbenchMessages.IDEWorkspacePreference_RefreshLightweightButtonText);
         this.lightweightRefreshButton.setToolTipText(IDEWorkbenchMessages.IDEWorkspacePreference_RefreshLightweightButtonToolTip);
 
-		boolean lightweightRefresh = Platform.getPreferencesService().getBoolean(ResourcesPlugin.PI_RESOURCES,
-				ResourcesPlugin.PREF_LIGHTWEIGHT_AUTO_REFRESH, false, null);
-		boolean autoRefresh = Platform.getPreferencesService().getBoolean(ResourcesPlugin.PI_RESOURCES,
-				ResourcesPlugin.PREF_AUTO_REFRESH, false, null);
-
+        boolean lightweightRefresh = ResourcesPlugin.getPlugin()
+                .getPluginPreferences().getBoolean(
+                		ResourcesPlugin.PREF_LIGHTWEIGHT_AUTO_REFRESH);
+        boolean autoRefresh = ResourcesPlugin.getPlugin()
+		        .getPluginPreferences().getBoolean(
+		                ResourcesPlugin.PREF_AUTO_REFRESH);
+        
         this.autoRefreshButton.setSelection(autoRefresh);
         this.lightweightRefreshButton.setSelection(lightweightRefresh);
     }
 
     /**
-	 * Create a composite that contains the encoding controls
-	 *
-	 * @param parent
-	 */
-    private void createEncodingEditorControls(Composite parent){
+     * Create a composite that contains the encoding controls
+     * 
+     * @param parent
+     */
+    private void createEncodingEditorControls(Composite parent){    			
 		Composite encodingComposite = new Composite(parent,SWT.NONE);
 		encodingComposite.setLayout(new GridLayout());
 		encodingComposite.setLayoutData(new GridData(
                 GridData.HORIZONTAL_ALIGN_FILL | GridData.GRAB_HORIZONTAL));
-
+		
 		encodingEditor = new ResourceEncodingFieldEditor(IDEWorkbenchMessages.WorkbenchPreference_encoding, encodingComposite, ResourcesPlugin
 				.getWorkspace().getRoot());
 
 		encodingEditor.setPage(this);
 		encodingEditor.load();
-		encodingEditor.setPropertyChangeListener(event -> {
-			if (event.getProperty().equals(FieldEditor.IS_VALID)) {
-				setValid(encodingEditor.isValid());
-			}
+		encodingEditor.setPropertyChangeListener(new IPropertyChangeListener() {
+			@Override
+			public void propertyChange(PropertyChangeEvent event) {
+				if (event.getProperty().equals(FieldEditor.IS_VALID)) {
+					setValid(encodingEditor.isValid());
+				}
 
+			}
 		});
     }
-
+    
     /**
      * Create a composite that contains the line delimiter controls
-     *
+     * 
      * @param parent
      */
     private void createLineSeparatorEditorControls(Composite parent){
@@ -365,14 +362,14 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
 
 		lineComposite.setLayoutData(new GridData(
                 GridData.HORIZONTAL_ALIGN_FILL | GridData.GRAB_HORIZONTAL));
-
+		
 		lineSeparatorEditor = new LineDelimiterEditor(lineComposite);
 		lineSeparatorEditor.doLoad();
     }
 
 	/**
 	 * Create the widget for the system explorer command.
-	 *
+	 * 
 	 * @param composite
 	 */
 	protected void createSystemExplorerGroup(Composite composite) {
@@ -397,9 +394,12 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
 
 		systemExplorer.load();
 
-		systemExplorer.setPropertyChangeListener(event -> {
-			if (event.getProperty().equals(FieldEditor.IS_VALID)) {
-				setValid(systemExplorer.isValid());
+		systemExplorer.setPropertyChangeListener(new IPropertyChangeListener() {
+			@Override
+			public void propertyChange(PropertyChangeEvent event) {
+				if (event.getProperty().equals(FieldEditor.IS_VALID)) {
+					setValid(systemExplorer.isValid());
+				}
 			}
 		});
 	}
@@ -411,10 +411,10 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
     protected IPreferenceStore getIDEPreferenceStore() {
         return IDEWorkbenchPlugin.getDefault().getPreferenceStore();
     }
-
+	
 	/**
      * Creates a tab of one horizontal spans.
-     *
+     * 
      * @param parent
      *            the parent in which the tab should be created
      */
@@ -432,7 +432,7 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
 	/**
      * Creates the composite which will contain all the preference controls for
      * this page.
-     *
+     * 
      * @param parent
      *            the parent composite
      * @return the composite for this page
@@ -450,9 +450,8 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
 
 	@Override
 	public void init(org.eclipse.ui.IWorkbench workbench) {
-		e4Context = workbench.getService(IEclipseContext.class);
     }
-
+    
     /**
      * The default button has been pressed.
      */
@@ -469,9 +468,9 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
                 .setSelection(store
                         .getDefaultBoolean(IDEInternalPreferences.SAVE_ALL_BEFORE_BUILD));
         saveInterval.loadDefault();
-		showLocationInWindowTitle.setSelection(store.getDefaultBoolean(IDEInternalPreferences.SHOW_LOCATION));
+		showLocationInWindowTitle.loadDefault();
         workspaceName.loadDefault();
-
+        
         boolean closeUnrelatedProj = store.getDefaultBoolean(IDEInternalPreferences.CLOSE_UNRELATED_PROJECTS);
         closeUnrelatedProjectButton.setSelection(closeUnrelatedProj);
 
@@ -528,22 +527,24 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
         // core's pref. ours is not up-to-date anyway if someone changes this
         // interval directly thru core api.
         long oldSaveInterval = description.getSnapshotInterval() / 60000;
-        long newSaveInterval = Long.parseLong(saveInterval.getStringValue());
+        long newSaveInterval = new Long(saveInterval.getStringValue())
+                .longValue();
         if (oldSaveInterval != newSaveInterval) {
             try {
                 description.setSnapshotInterval(newSaveInterval * 60000);
                 ResourcesPlugin.getWorkspace().setDescription(description);
-                store.firePropertyChangeEvent(IDEInternalPreferences.SAVE_INTERVAL, (int) oldSaveInterval,
-                    (int) newSaveInterval);
+                store.firePropertyChangeEvent(
+                        IDEInternalPreferences.SAVE_INTERVAL, new Integer(
+                                (int) oldSaveInterval), new Integer(
+                                (int) newSaveInterval));
             } catch (CoreException e) {
                 IDEWorkbenchPlugin.log(
                         "Error changing save interval preference", e //$NON-NLS-1$
                                 .getStatus());
             }
         }
-
-		store.setValue(IDEInternalPreferences.SHOW_LOCATION, showLocationInWindowTitle.getSelection());
-
+        
+		showLocationInWindowTitle.store();
         workspaceName.store();
 
 		systemExplorer.store();
@@ -558,8 +559,8 @@ public class IDEWorkspacePreferencePage extends PreferencePage implements IWorkb
 
         boolean closeUnrelatedProj = closeUnrelatedProjectButton.getSelection();
         getIDEPreferenceStore().setValue(IDEInternalPreferences.CLOSE_UNRELATED_PROJECTS, closeUnrelatedProj);
-
-
+        
+        
         if (clearUserSettings) {
 			IDEEncoding.clearUserEncodings();
 		}
