@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2016 Freescale Semiconductor and others.
+ * Copyright (c) 2008, 2014 Freescale Semiconductor and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -9,8 +9,6 @@
  *     Serge Beauchamp (Freescale Semiconductor) - [252996] initial API and implementation
  *     IBM Corporation - ongoing implementation
  *     Lars Vogel <Lars.Vogel@gmail.com> - Bug 430694
- *     Mickael Istria (Red Hat Inc.) - Bug 486901
- *                                   - [Cleanup] Avoid useless string instances
  *******************************************************************************/
 package org.eclipse.ui.internal.ide.dialogs;
 
@@ -26,6 +24,7 @@ import java.text.DateFormat;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Calendar;
+import java.util.Comparator;
 import java.util.Date;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -63,8 +62,10 @@ import org.eclipse.jface.viewers.ColumnWeightData;
 import org.eclipse.jface.viewers.ComboBoxCellEditor;
 import org.eclipse.jface.viewers.ICellModifier;
 import org.eclipse.jface.viewers.ISelection;
+import org.eclipse.jface.viewers.ISelectionChangedListener;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.jface.viewers.ITreeContentProvider;
+import org.eclipse.jface.viewers.SelectionChangedEvent;
 import org.eclipse.jface.viewers.StructuredSelection;
 import org.eclipse.jface.viewers.StyledCellLabelProvider;
 import org.eclipse.jface.viewers.StyledString;
@@ -83,6 +84,10 @@ import org.eclipse.swt.dnd.DragSourceEvent;
 import org.eclipse.swt.dnd.DragSourceListener;
 import org.eclipse.swt.dnd.Transfer;
 import org.eclipse.swt.dnd.TransferData;
+import org.eclipse.swt.events.MenuDetectEvent;
+import org.eclipse.swt.events.MenuDetectListener;
+import org.eclipse.swt.events.ModifyEvent;
+import org.eclipse.swt.events.ModifyListener;
 import org.eclipse.swt.events.MouseEvent;
 import org.eclipse.swt.events.MouseListener;
 import org.eclipse.swt.events.SelectionAdapter;
@@ -204,7 +209,7 @@ public class ResourceFilterGroup {
 
 	/**
 	 * Set the IContainer resource to edit
-	 *
+	 * 
 	 * @param res
 	 *            the container resource
 	 */
@@ -352,7 +357,7 @@ public class ResourceFilterGroup {
 	static String excludeAllGroup = "EXCLUDE_ALL_GROUP";  //$NON-NLS-1$
 
 	class TreeContentProvider implements ITreeContentProvider {
-
+		
 		@Override
 		public Object[] getChildren(Object parentElement) {
 			if (parentElement == filters) {
@@ -441,7 +446,7 @@ public class ResourceFilterGroup {
 		ICustomFilterArgumentUI getUI(String descriptorID) {
 			ICustomFilterArgumentUI result = (ICustomFilterArgumentUI) customfilterArgumentMap.get(descriptorID);
 			if (result == null)
-				return result = (ICustomFilterArgumentUI) customfilterArgumentMap.get(""); //default ui //$NON-NLS-1$
+				return result = (ICustomFilterArgumentUI) customfilterArgumentMap.get(new String()); // default ui
 			return result;
 		}
 
@@ -480,14 +485,14 @@ public class ResourceFilterGroup {
 			}
 			else {
 				filter = (FilterCopy) element;
-
+	
 				if (column.equals(FilterTypeUtil.MODE)) {
 					StyledString styledString = getStyleColumnText(filter);
 					if (!isPartialFilter(filter)) {
 						Object isInheritable = FilterTypeUtil.getValue(filter, FilterTypeUtil.INHERITABLE);
 						if (((Boolean)isInheritable).booleanValue())
 							styledString.append("   " + IDEWorkbenchMessages.ResourceFilterPage_recursive); //$NON-NLS-1$
-
+						
 					}
 					cell.setText(styledString.toString());
 					cell.setStyleRanges(styledString.getStyleRanges());
@@ -503,7 +508,7 @@ public class ResourceFilterGroup {
 
 			super.update(cell);
 		}
-
+		
 		private StyledString getStyleColumnText(FilterCopy filter) {
 			if ((filter.getChildrenLimit() > 0)) {
 				String whiteSpace = " "; //$NON-NLS-1$;
@@ -549,7 +554,7 @@ public class ResourceFilterGroup {
 			return ""; //$NON-NLS-1$
 		}
 	}
-
+	
 	class CellModifier implements ICellModifier {
 		@Override
 		public boolean canModify(Object element, String property) {
@@ -577,7 +582,7 @@ public class ResourceFilterGroup {
 	/**
 	 * Creates the widget group. Callers must call <code>dispose</code> when the
 	 * group is no longer needed.
-	 *
+	 * 
 	 * @param parent
 	 *            the widget parent
 	 * @return container of the widgets
@@ -619,7 +624,7 @@ public class ResourceFilterGroup {
 		data.horizontalSpan = 2;
 		label.setLayoutData(data);
 		label.setFont(font);
-
+		
 		createViewerGroup(composite);
 		createButtonGroup(composite);
 
@@ -652,7 +657,12 @@ public class ResourceFilterGroup {
 		filterView.setInput(filters);
 		filterView.getTree().setFont(parent.getFont());
 
-		filterView.addSelectionChangedListener(event -> refreshEnablement());
+		filterView.addSelectionChangedListener(new ISelectionChangedListener() {
+			@Override
+			public void selectionChanged(SelectionChangedEvent event) {
+				refreshEnablement();
+			}
+		});
 
 		TreeColumn modeColumn = new TreeColumn(filterView.getTree(), 0);
 		modeColumn
@@ -713,15 +723,18 @@ public class ResourceFilterGroup {
 		filterView.addDropSupport(ops, transfers,
 				new FilterCopyDrop(filterView));
 
-		filterView.getTree().addMenuDetectListener(e -> {
-			MenuManager mgr = new MenuManager();
-			mgr.add(addSubFilterAction);
-			mgr.add(addSubGroupFilterAction);
-			mgr.add(new Separator());
-			mgr.add(new EditFilterAction());
-			mgr.add(new RemoveFilterAction());
-			filterView.getControl().setMenu(
-					mgr.createContextMenu(filterView.getControl()));
+		filterView.getTree().addMenuDetectListener(new MenuDetectListener() {
+			@Override
+			public void menuDetected(MenuDetectEvent e) {
+				MenuManager mgr = new MenuManager();
+				mgr.add(addSubFilterAction);
+				mgr.add(addSubGroupFilterAction);
+				mgr.add(new Separator());
+				mgr.add(new EditFilterAction());
+				mgr.add(new RemoveFilterAction());
+				filterView.getControl().setMenu(
+						mgr.createContextMenu(filterView.getControl()));
+			}
 		});
 		TreeColumnLayout layout = new TreeColumnLayout();
 		tableComposite.setLayout( layout );
@@ -791,7 +804,7 @@ public class ResourceFilterGroup {
 	class AddSubFilterAction extends Action {
 
 		boolean createGroupOnly;
-
+		
 		public AddSubFilterAction(boolean createGroupOnly) {
 			this.createGroupOnly = createGroupOnly;
 			setText(NLS
@@ -832,7 +845,7 @@ public class ResourceFilterGroup {
 		}
 		handleAdd(selectedObject, createGroupOnly);
 	}
-
+	
 	private void handleAdd(Object selection, boolean createGroupOnly) {
 		if (selection == null) {
 			FilterCopy newFilter = new FilterCopy();
@@ -868,7 +881,8 @@ public class ResourceFilterGroup {
 		}
 		else if (selection instanceof String) {
 			FilterCopy newFilter = new FilterCopy();
-			FilterTypeUtil.setValue(newFilter, FilterTypeUtil.MODE, selection.equals(includeOnlyGroup) ? 0 : 1);
+			FilterTypeUtil.setValue(newFilter, FilterTypeUtil.MODE,
+					new Integer(selection.equals(includeOnlyGroup) ? 0:1));
 			FilterEditDialog dialog = new FilterEditDialog(resource, ResourceFilterGroup.this, shell,
 					newFilter, createGroupOnly, true);
 			if (dialog.open() == Window.OK) {
@@ -929,7 +943,8 @@ public class ResourceFilterGroup {
 				if (target instanceof Filters)
 					filters.add(toDrop[i]);
 				if (target instanceof String) {
-					FilterTypeUtil.setValue(toDrop[i], FilterTypeUtil.MODE, target.equals(includeOnlyGroup) ? 0 : 1);
+					FilterTypeUtil.setValue(toDrop[i], FilterTypeUtil.MODE,
+							new Integer(target.equals(includeOnlyGroup) ? 0:1));
 					addToTopLevelFilters(toDrop[i]);
 				}
 				if (target instanceof FilterCopy)
@@ -998,7 +1013,7 @@ public class ResourceFilterGroup {
 				handleAdd(false);
 			}
 		});
-
+		
 		addGroupButton = new Button(composite, SWT.PUSH);
 		addGroupButton.setText(NLS.bind(
 				IDEWorkbenchMessages.ResourceFilterPage_addGroupButtonLabel, null));
@@ -1011,7 +1026,7 @@ public class ResourceFilterGroup {
 				handleAdd(true);
 			}
 		});
-
+		
 
 		editButton = new Button(composite, SWT.PUSH);
 		editButton.setText(NLS.bind(
@@ -1206,7 +1221,7 @@ public class ResourceFilterGroup {
 
 	/**
 	 * Apply the read only state and the encoding to the resource.
-	 *
+	 * 
 	 * @return true if the filters changed
 	 */
 	public boolean performOk() {
@@ -1426,25 +1441,25 @@ class FilterTypeUtil {
 		if (property.equals(ID)) {
 			String id = filter.getFileInfoMatcherDescription().getId();
 			int index = getDescriptorIndex(id);
-			return index;
+			return new Integer(index);
 		}
 		if (property.equals(MODE)) {
 			if ((filter.getType() & IResourceFilterDescription.INCLUDE_ONLY) != 0)
-				return 0;
-			return 1;
+				return new Integer(0);
+			return new Integer(1);
 		}
 		if (property.equals(TARGET)) {
 			boolean includeFiles = (filter.getType() & IResourceFilterDescription.FILES) != 0;
 			boolean includeFolders = (filter.getType() & IResourceFilterDescription.FOLDERS) != 0;
 			if (includeFiles && includeFolders)
-				return 2;
+				return new Integer(2);
 			if (includeFiles)
-				return 0;
+				return new Integer(0);
 			if (includeFolders)
-				return 1;
+				return new Integer(1);
 		}
 		if (property.equals(INHERITABLE))
-			return Boolean.valueOf(
+			return new Boolean(
 					(filter.getType() & IResourceFilterDescription.INHERITABLE) != 0);
 
 		if (property.equals(ARGUMENTS))
@@ -1487,12 +1502,15 @@ class FilterTypeUtil {
 	 * @param descriptors
 	 */
 	private static void sortDescriptors(IFilterMatcherDescriptor[] descriptors) {
-		Arrays.sort(descriptors, (arg0, arg1) -> {
-			if (arg0.getId().equals(FileInfoAttributesMatcher.ID))
-				return -1;
-			if (arg1.getId().equals(FileInfoAttributesMatcher.ID))
-				return 1;
-			return arg0.getId().compareTo(arg1.getId());
+		Arrays.sort(descriptors, new Comparator() {
+			@Override
+			public int compare(Object arg0, Object arg1) {
+				if (((IFilterMatcherDescriptor) arg0).getId().equals(FileInfoAttributesMatcher.ID))
+					return -1;
+				if (((IFilterMatcherDescriptor) arg1).getId().equals(FileInfoAttributesMatcher.ID))
+					return 1;
+				return ((IFilterMatcherDescriptor) arg0).getId().compareTo(((IFilterMatcherDescriptor) arg1).getId());
+			}
 		});
 	}
 
@@ -1828,8 +1846,8 @@ class FilterCopy extends UIResourceFilterDescription {
 
 	@Override
 	public FileInfoMatcherDescription getFileInfoMatcherDescription() {
-
-
+		
+		
 		Object arg = FilterCopy.this.getArguments();
 		if (arg instanceof FilterCopy []) {
 			FilterCopy [] filterCopies = (FilterCopy []) arg;
@@ -1838,7 +1856,7 @@ class FilterCopy extends UIResourceFilterDescription {
 				descriptions[i] = filterCopies[i].getFileInfoMatcherDescription();
 			arg = descriptions;
 		}
-
+		
 		FileInfoMatcherDescription desc = new FileInfoMatcherDescription(getId(), arg);
 		return desc;
 	}
@@ -1942,7 +1960,7 @@ class FilterEditDialog extends TrayDialog {
 			createModeArea(font, topComposite);
 
 			createTargetArea(font, topComposite);
-
+			
 			createIdArea(font, topComposite);
 		}
 		else {
@@ -1971,7 +1989,7 @@ class FilterEditDialog extends TrayDialog {
         	Control helpControl = createHelpControl(composite);
         	((GridData) helpControl.getLayoutData()).horizontalIndent = convertHorizontalDLUsToPixels(IDialogConstants.HORIZONTAL_MARGIN);
 		}
-
+       
         Control buttonSection = dialogCreateButtonBar(composite);
         ((GridData) buttonSection.getLayoutData()).grabExcessHorizontalSpace = true;
         return composite;
@@ -1993,7 +2011,7 @@ class FilterEditDialog extends TrayDialog {
 				| GridData.VERTICAL_ALIGN_CENTER);
 		composite.setLayoutData(data);
 		composite.setFont(parent.getFont());
-
+		
 		// Add the buttons to the button bar.
 		createButtonsForButtonBar(composite);
 		return composite;
@@ -2020,7 +2038,7 @@ class FilterEditDialog extends TrayDialog {
 		inherited = new Button(inheritableComposite, SWT.CHECK);
 		String label;
 		label = IDEWorkbenchMessages.ResourceFilterPage_applyRecursivelyToFolderStructure;
-
+		
 		inherited
 				.setText(NLS
 						.bind(
@@ -2034,7 +2052,7 @@ class FilterEditDialog extends TrayDialog {
 			@Override
 			public void widgetSelected(SelectionEvent e) {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.INHERITABLE,
-						Boolean.valueOf(inherited.getSelection()));
+						new Boolean(inherited.getSelection()));
 			}
 		});
 		inherited.setSelection((((Boolean) FilterTypeUtil.getValue(filter,
@@ -2055,7 +2073,8 @@ class FilterEditDialog extends TrayDialog {
 		includeButton.addSelectionListener(new SelectionAdapter() {
 			@Override
 			public void widgetSelected(SelectionEvent e) {
-				FilterTypeUtil.setValue(filter, FilterTypeUtil.MODE, 0);
+				FilterTypeUtil.setValue(filter, FilterTypeUtil.MODE,
+						new Integer(0));
 			}
 		});
 		includeButton.setSelection(((Integer) FilterTypeUtil.getValue(
@@ -2068,7 +2087,8 @@ class FilterEditDialog extends TrayDialog {
 		excludeButton.addSelectionListener(new SelectionAdapter() {
 			@Override
 			public void widgetSelected(SelectionEvent e) {
-				FilterTypeUtil.setValue(filter, FilterTypeUtil.MODE, 1);
+				FilterTypeUtil.setValue(filter, FilterTypeUtil.MODE,
+						new Integer(1));
 			}
 		});
 		excludeButton.setSelection(((Integer) FilterTypeUtil.getValue(
@@ -2077,7 +2097,7 @@ class FilterEditDialog extends TrayDialog {
 
 	private void createIdArea(Font font, Composite composite) {
 		if (createGroupOnly) {
-			idComposite = createGroup(font, composite, "", //$NON-NLS-1$
+			idComposite = createGroup(font, composite, new String(),
 					true, true, 1);
 			createMatcherCombo(idComposite, font);
 			GridData data = new GridData(SWT.FILL, SWT.CENTER, true, false);
@@ -2122,7 +2142,7 @@ class FilterEditDialog extends TrayDialog {
 				FilterTypeUtil.setValue(filter, FilterTypeUtil.ID, idCombo
 						.getItem(idCombo.getSelectionIndex()));
 				if (filter.hasStringArguments())
-					filter.setArguments(""); //$NON-NLS-1$
+					filter.setArguments(new String());
 				setupPatternLine();
 				currentCustomFilterArgumentUI.selectionChanged();
 				getShell().layout(true);
@@ -2139,15 +2159,15 @@ class FilterEditDialog extends TrayDialog {
 		FilterTypeUtil.setValue(filter, FilterTypeUtil.ID, idCombo
 				.getItem(idCombo.getSelectionIndex()));
 	}
-
+	
 
 	ICustomFilterArgumentUI getUI(String descriptorID) {
 		ICustomFilterArgumentUI result = (ICustomFilterArgumentUI) customfilterArgumentMap.get(descriptorID);
 		if (result == null)
-			return result = (ICustomFilterArgumentUI) customfilterArgumentMap.get(""); //default ui //$NON-NLS-1$
+			return result = (ICustomFilterArgumentUI) customfilterArgumentMap.get(new String()); // default ui
 		return result;
 	}
-
+	
 	private void setupPatternLine() {
 		IFilterMatcherDescriptor descriptor;
 		if (createGroupOnly) {
@@ -2166,7 +2186,7 @@ class FilterEditDialog extends TrayDialog {
 	}
 
 	/**
-	 *
+	 * 
 	 */
 	private void selectComboItem(String filterID) {
 		IFilterMatcherDescriptor descriptor = ResourcesPlugin.getWorkspace()
@@ -2219,7 +2239,7 @@ class FilterEditDialog extends TrayDialog {
 		GridData data;
 		Composite targetComposite = createGroup(font, composite,
 				NLS.bind(IDEWorkbenchMessages.ResourceFilterPage_columnFilterTarget, null), false, true, 1);
-
+		
 		String[] targets = FilterTypeUtil.getTargets();
 		filesButton = new Button(targetComposite, SWT.RADIO);
 		filesButton.setText(targets[0]);
@@ -2242,19 +2262,22 @@ class FilterEditDialog extends TrayDialog {
 		filesButton.addSelectionListener(new SelectionAdapter() {
 			@Override
 			public void widgetSelected(SelectionEvent e) {
-				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET, 0);
+				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET,
+						new Integer(0));
 			}
 		});
 		foldersButton.addSelectionListener(new SelectionAdapter() {
 			@Override
 			public void widgetSelected(SelectionEvent e) {
-				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET, 1);
+				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET,
+						new Integer(1));
 			}
 		});
 		filesAndFoldersButton.addSelectionListener(new SelectionAdapter() {
 			@Override
 			public void widgetSelected(SelectionEvent e) {
-				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET, 2);
+				FilterTypeUtil.setValue(filter, FilterTypeUtil.TARGET,
+						new Integer(2));
 			}
 		});
 		filesButton.setSelection(((Integer) FilterTypeUtil.getValue(filter,
@@ -2364,12 +2387,12 @@ interface ICustomFilterArgumentUI {
 
 	/**
 	 * @return null if there's no issue
-	 *
+	 * 
 	 */
 	String validate();
 
 	/**
-	 *
+	 * 
 	 */
 	void selectionChanged();
 
@@ -2380,10 +2403,10 @@ interface ICustomFilterArgumentUI {
 	void create(Composite argumentComposite, Font font);
 
 	/**
-	 *
+	 * 
 	 */
 	void dispose();
-
+	
 }
 
 class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
@@ -2412,7 +2435,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 	protected FilterEditDialog dialog;
 	protected Label dummyLabel1;
 	protected Label dummyLabel2;
-
+	
 	/**
 	 * @param dialog
 	 * @param parentShell
@@ -2471,7 +2494,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		GridData data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		argumentComposite.setLayoutData(data);
 		argumentComposite.setFont(font);
-
+		
 		conditionComposite = new Composite(argumentComposite, SWT.NONE);
 		layout = new GridLayout();
 		layout.numColumns = 2;
@@ -2484,7 +2507,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		conditionComposite.setLayoutData(data);
 
 		createCustomArgumentsArea(font, conditionComposite);
-
+		
 		descriptionComposite = new Composite(argumentComposite, SWT.NONE);
 		layout = new GridLayout();
 		layout.numColumns = 1;
@@ -2495,11 +2518,11 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		descriptionComposite.setFont(font);
 		data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		descriptionComposite.setLayoutData(data);
-
+		
 		createDescriptionArea(font, descriptionComposite);
 		initializationComplete = true;
 	}
-
+	
 	/**
 	 * @param font
 	 * @param composite
@@ -2533,7 +2556,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				String selectedKey = MultiMatcherLocalization.getMultiMatcherKey(multiKey.getText());
 				String selectedOperator = MultiMatcherLocalization.getMultiMatcherKey(multiOperator.getText());
 				Class selectedKeyOperatorType = FileInfoAttributesMatcher.getTypeForKey(selectedKey, selectedOperator);
-				description.setText(""); //$NON-NLS-1$
+				description.setText(new String());
 				if (selectedKeyOperatorType.equals(String.class)) {
 					if (!argumentsRegularExpresion.getSelection())
 						description.setText(NLS.bind(
@@ -2551,7 +2574,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			shell.layout(true, true);
 		}
 	}
-
+	
 	private void createCustomArgumentsArea(Font font, Composite composite) {
 		GridData data;
 
@@ -2566,7 +2589,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		multiArgumentComposite.setFont(font);
 		data = new GridData(SWT.FILL, SWT.FILL, true, true);
 		multiArgumentComposite.setLayoutData(data);
-
+		
 		multiKey = new Combo(multiArgumentComposite, SWT.READ_ONLY);
 		multiKey.setItems(getMultiMatcherKeys());
 		data = new GridData(SWT.LEFT, SWT.TOP, false, false);
@@ -2579,7 +2602,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				storeMultiSelection();
 			}
 		});
-
+		
 		// calculate max combo width
 		ArrayList allOperators = new ArrayList();
 		String[] keys = getMultiMatcherKeys();
@@ -2603,7 +2626,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				storeMultiSelection();
 			}
 		});
-
+		
 		FileInfoAttributesMatcher.Argument argument = FileInfoAttributesMatcher.decodeArguments((String) filter.getArguments());
 		String local = MultiMatcherLocalization.getLocalMultiMatcherKey(argument.key);
 		int index = multiKey.indexOf(local);
@@ -2611,7 +2634,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			multiKey.select(index);
 		else
 			multiKey.select(0);
-
+		
 		setupMultiOperatorAndField(true);
 	}
 
@@ -2630,9 +2653,9 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				multiOperator.select(0);
 		}
 		String selectedOperator = MultiMatcherLocalization.getMultiMatcherKey(multiOperator.getText());
-
+		
 		Class selectedKeyOperatorType = FileInfoAttributesMatcher.getTypeForKey(selectedKey, selectedOperator);
-
+		
 		if (intiantiatedKeyOperatorType != null) {
 			if (arguments != null) {
 				arguments.dispose();
@@ -2675,33 +2698,38 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			valueCache.put(intiantiatedKeyOperatorType.getName(), argument.pattern);
 			argument.pattern = (String) valueCache.get(selectedKeyOperatorType.getName());
 			if (argument.pattern == null)
-				argument.pattern = ""; //$NON-NLS-1$
+				argument.pattern = new String();
 			filter.setArguments(FileInfoAttributesMatcher.encodeArguments(argument));
 		}
 
 		if (selectedKeyOperatorType.equals(String.class)) {
-
+	
 			arguments = new Text(multiArgumentComposite, SWT.SINGLE | SWT.BORDER);
 			GridData data= new GridData(SWT.FILL, SWT.FILL, true, false);
 			data.widthHint = 150;
 			arguments.setLayoutData(data);
 			arguments.setFont(multiArgumentComposite.getFont());
-			arguments.addModifyListener(e -> validateInputText());
+			arguments.addModifyListener(new ModifyListener() {
+				@Override
+				public void modifyText(ModifyEvent e) {
+					validateInputText();
+				}
+			});
 
 			dummyLabel1 = new Label(multiArgumentComposite, SWT.NONE);
 			data = new GridData(SWT.LEFT, SWT.CENTER, true, true);
-			dummyLabel1.setText(""); //$NON-NLS-1$
+			dummyLabel1.setText(new String());
 			data.horizontalSpan = 1;
 			dummyLabel1.setLayoutData(data);
 
 			dummyLabel2 = new Label(multiArgumentComposite, SWT.NONE);
 			data = new GridData(SWT.LEFT, SWT.CENTER, true, true);
-			dummyLabel2.setText(""); //$NON-NLS-1$
+			dummyLabel2.setText(new String());
 			data.horizontalSpan = 1;
 			dummyLabel2.setLayoutData(data);
 
 			stringArgumentComposite = new Composite(multiArgumentComposite, SWT.NONE);
-
+			
 			GridLayout layout = new GridLayout();
 			layout.numColumns = 2;
 			layout.marginWidth = 0;
@@ -2737,7 +2765,12 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				argumentsRegularExpresion.setSelection(argument.regularExpression);
 			}
 
-			arguments.addModifyListener(e -> storeMultiSelection());
+			arguments.addModifyListener(new ModifyListener() {
+				@Override
+				public void modifyText(ModifyEvent e) {
+					storeMultiSelection();
+				}
+			});
 			argumentsRegularExpresion.addSelectionListener(new SelectionAdapter() {
 				@Override
 				public void widgetSelected(SelectionEvent e) {
@@ -2771,7 +2804,12 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			data.widthHint = 150;
 			arguments.setLayoutData(data);
 			arguments.setFont(multiArgumentComposite.getFont());
-			arguments.addModifyListener(e -> validateInputText());
+			arguments.addModifyListener(new ModifyListener() {
+				@Override
+				public void modifyText(ModifyEvent e) {
+					validateInputText();
+				}
+			});
 
 			if (filter.hasStringArguments()) {
 				FileInfoAttributesMatcher.Argument argument = FileInfoAttributesMatcher.decodeArguments((String) filter.getArguments());
@@ -2780,8 +2818,13 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				else
 					arguments.setText(convertToEditableLength(argument.pattern));
 			}
-
-			arguments.addModifyListener(e -> storeMultiSelection());
+			
+			arguments.addModifyListener(new ModifyListener() {
+				@Override
+				public void modifyText(ModifyEvent e) {
+					storeMultiSelection();
+				}
+			});
 		}
 		if (selectedKeyOperatorType.equals(Date.class)) {
 			GridData data;
@@ -2834,7 +2877,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			}
 		}
 		intiantiatedKeyOperatorType = selectedKeyOperatorType;
-
+		
 		if (fContentAssistField != null)
 			fContentAssistField.setEnabled(isUsingRegularExpression);
 
@@ -2889,7 +2932,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 	}
 
 
-	private String[] lengthPrefixes = { "", "k", "m", "g" }; //$NON-NLS-1$//$NON-NLS-2$//$NON-NLS-3$//$NON-NLS-4$
+	private String[] lengthPrefixes = {new String(), "k", "m", "g"};    //$NON-NLS-1$//$NON-NLS-2$//$NON-NLS-3$
 
 	// converts "32768" to "32k"
 	private String convertToEditableLength(String string) {
@@ -2911,7 +2954,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		}
 		return Long.toString(value) + lengthPrefixes[lengthPrefixes.length - 1];
 	}
-
+	
 	// converts "32k" to "32768"
 	private String convertFromEditableLength(String string) throws NumberFormatException {
 		if (string.length() == 0)
@@ -2926,16 +2969,16 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		// seems equivalent to "return string", but it throws an exception if the string doesn't contain a valid number
 		return Long.toString(Long.parseLong(string));
 	}
-
+	
 	private void storeMultiSelection() {
 		if (intiantiatedKeyOperatorType != null) {
 			String selectedKey = MultiMatcherLocalization.getMultiMatcherKey(multiKey.getText());
 			String selectedOperator = MultiMatcherLocalization.getMultiMatcherKey(multiOperator.getText());
-
+	
 			FileInfoAttributesMatcher.Argument argument = new FileInfoAttributesMatcher.Argument();
 			argument.key = selectedKey;
 			argument.operator = selectedOperator;
-
+			
 			if (intiantiatedKeyOperatorType.equals(Date.class) && argumentsDate != null) {
 				Calendar calendar = Calendar.getInstance();
 				calendar.set(argumentsDate.getYear(), argumentsDate.getMonth(), argumentsDate.getDay());
@@ -3003,11 +3046,11 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		if (intiantiatedKeyOperatorType != null) {
 			String selectedKey = MultiMatcherLocalization.getMultiMatcherKey(multiKey.getText());
 			String selectedOperator = MultiMatcherLocalization.getMultiMatcherKey(multiOperator.getText());
-
+	
 			FileInfoAttributesMatcher.Argument argument = new FileInfoAttributesMatcher.Argument();
 			argument.key = selectedKey;
 			argument.operator = selectedOperator;
-
+			
 			if (intiantiatedKeyOperatorType.equals(Date.class) && argumentsDate != null) {
 			}
 			if (intiantiatedKeyOperatorType.equals(String.class) && arguments != null) {
@@ -3049,7 +3092,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 				}
 			}
 			if (intiantiatedKeyOperatorType.equals(Boolean.class) && argumentsBoolean != null) {
-
+				
 			}
 		}
 		return message;
@@ -3064,7 +3107,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 	private String formatMultiMatcherArgument(FilterCopy filter) {
 		String argumentString = (String) filter.getArguments();
 		FileInfoAttributesMatcher.Argument argument = FileInfoAttributesMatcher.decodeArguments(argumentString);
-
+		
 		StringBuffer builder = new StringBuffer();
 		builder.append(MultiMatcherLocalization.getLocalMultiMatcherKey(argument.key));
 		builder.append(' ');
@@ -3083,7 +3126,7 @@ class MultiMatcherCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		}
 		if (type.equals(Date.class))
 			builder.append(DateFormat.getDateInstance().format(new Date(Long.parseLong(argument.pattern))));
-
+		
 		return builder.toString();
 	}
 }
@@ -3113,7 +3156,7 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 
 	@Override
 	public Object getID() {
-		return ""; //$NON-NLS-1$
+		return new String();
 	}
 
 	@Override
@@ -3149,7 +3192,7 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 			fContentAssistField.setEnabled(filter.getId().equals(REGEX_FILTER_ID));
 		argumentComposite.layout(true);
 	}
-
+	
 	private void createArgumentsArea(Font font, Composite composite) {
 		GridData data;
 		argumentsLabel = addLabel(composite, NLS.bind(
@@ -3159,8 +3202,13 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 		data = new GridData(SWT.FILL, SWT.CENTER, true, false);
 		arguments.setLayoutData(data);
 		arguments.setFont(font);
-		arguments.addModifyListener(e -> FilterTypeUtil.setValue(filter, FilterTypeUtil.ARGUMENTS,
-				arguments.getText()));
+		arguments.addModifyListener(new ModifyListener() {
+			@Override
+			public void modifyText(ModifyEvent e) {
+				FilterTypeUtil.setValue(filter, FilterTypeUtil.ARGUMENTS,
+						arguments.getText());
+			}
+		});
 		if (filter.hasStringArguments())
 			arguments.setText((String) FilterTypeUtil.getValue(filter,
 					FilterTypeUtil.ARGUMENTS));
@@ -3234,13 +3282,13 @@ class DefaultCustomFilterArgumentUI implements ICustomFilterArgumentUI {
 	@Override
 	public StyledString formatStyledText(FilterCopy filter,
 			Styler fPlainStyler, Styler fBoldStyler) {
-		return new StyledString(filter.getArguments() != null ? filter.getArguments().toString() :
-			"", fPlainStyler); //$NON-NLS-1$
+		return new StyledString(filter.getArguments() != null ? filter
+					.getArguments().toString() : new String(), fPlainStyler);
 	}
 }
 
 class MultiMatcherLocalization {
-
+	
 	static String[][] multiMatcherKey = {
 			{FileInfoAttributesMatcher.KEY_NAME, IDEWorkbenchMessages.ResourceFilterPage_multiKeyName},
 			{FileInfoAttributesMatcher.KEY_PROPJECT_RELATIVE_PATH, IDEWorkbenchMessages.ResourceFilterPage_multiKeyProjectRelativePath},
@@ -3260,7 +3308,7 @@ class MultiMatcherLocalization {
 			{Boolean.TRUE.toString(), IDEWorkbenchMessages.ResourceFilterPage_true},
 			{Boolean.FALSE.toString(), IDEWorkbenchMessages.ResourceFilterPage_false}
 	};
-
+	
 	static public String getLocalMultiMatcherKey(String key) {
 		for (int i = 0; i < multiMatcherKey.length; i++) {
 			if (multiMatcherKey[i][0].equals(key))
@@ -3268,7 +3316,7 @@ class MultiMatcherLocalization {
 		}
 		return null;
 	}
-
+	
 	static public String getMultiMatcherKey(String local) {
 		for (int i = 0; i < multiMatcherKey.length; i++) {
 			if (multiMatcherKey[i][1].equals(local))
