@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2015 IBM Corporation and others.
+ * Copyright (c) 2004, 2008 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -7,12 +7,13 @@
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
- *     Yves YANG <yves.yang@soyatec.com> -
+ *     Yves YANG <yves.yang@soyatec.com> - 
  *     		Initial Fix for Bug 138078 [Preferences] Preferences Store for i18n support
  *******************************************************************************/
 package org.eclipse.ui.preferences;
 
 import java.io.IOException;
+
 import org.eclipse.core.commands.common.EventManager;
 import org.eclipse.core.runtime.Assert;
 import org.eclipse.core.runtime.Platform;
@@ -20,10 +21,10 @@ import org.eclipse.core.runtime.Plugin;
 import org.eclipse.core.runtime.SafeRunner;
 import org.eclipse.core.runtime.preferences.DefaultScope;
 import org.eclipse.core.runtime.preferences.IEclipsePreferences;
+import org.eclipse.core.runtime.preferences.IScopeContext;
 import org.eclipse.core.runtime.preferences.IEclipsePreferences.INodeChangeListener;
 import org.eclipse.core.runtime.preferences.IEclipsePreferences.NodeChangeEvent;
 import org.eclipse.core.runtime.preferences.IEclipsePreferences.PreferenceChangeEvent;
-import org.eclipse.core.runtime.preferences.IScopeContext;
 import org.eclipse.jface.preference.IPersistentPreferenceStore;
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.resource.JFaceResources;
@@ -44,7 +45,7 @@ import org.osgi.service.prefs.BackingStoreException;
  * The default scope is always included in the search scopes when searching for
  * preference values.
  * </p>
- *
+ * 
  * @see org.eclipse.core.runtime.preferences
  * @since 3.1
  */
@@ -79,7 +80,7 @@ public class ScopedPreferenceStore extends EventManager implements
 	 * The default context is the context where getDefault and setDefault
 	 * methods will search. This context is also used in the search.
 	 */
-	private IScopeContext defaultContext = DefaultScope.INSTANCE;
+	private IScopeContext defaultContext = new DefaultScope();
 
 	/**
 	 * The nodeQualifer is the string used to look up the node in the contexts.
@@ -101,7 +102,7 @@ public class ScopedPreferenceStore extends EventManager implements
 	 * Create a new instance of the receiver. Store the values in context in the
 	 * node looked up by qualifier. <strong>NOTE:</strong> Any instance of
 	 * ScopedPreferenceStore should call
-	 *
+	 * 
 	 * @param context
 	 *            the scope to store to
 	 * @param qualifier
@@ -118,7 +119,7 @@ public class ScopedPreferenceStore extends EventManager implements
 	/**
 	 * Create a new instance of the receiver. Store the values in context in the
 	 * node looked up by qualifier.
-	 *
+	 * 
 	 * @param context
 	 *            the scope to store to
 	 * @param qualifier
@@ -136,7 +137,7 @@ public class ScopedPreferenceStore extends EventManager implements
 	/**
 	 * Return a node change listener that adds a removes the receiver when nodes
 	 * change.
-	 *
+	 * 
 	 * @return INodeChangeListener
 	 */
 	private INodeChangeListener getNodeChangeListener() {
@@ -192,7 +193,7 @@ public class ScopedPreferenceStore extends EventManager implements
 	 * the given object's type and then looks in the list of defaults to see if
 	 * a value exists. If not or if there is a problem converting the value, the
 	 * default default value for that type is returned.
-	 *
+	 * 
 	 * @param key
 	 *            the key to search
 	 * @param obj
@@ -204,7 +205,7 @@ public class ScopedPreferenceStore extends EventManager implements
 		if (obj instanceof String) {
 			return defaults.get(key, STRING_DEFAULT_DEFAULT);
 		} else if (obj instanceof Integer) {
-			return Integer.valueOf(defaults.getInt(key, INT_DEFAULT_DEFAULT));
+			return new Integer(defaults.getInt(key, INT_DEFAULT_DEFAULT));
 		} else if (obj instanceof Double) {
 			return new Double(defaults.getDouble(key, DOUBLE_DEFAULT_DEFAULT));
 		} else if (obj instanceof Float) {
@@ -221,7 +222,7 @@ public class ScopedPreferenceStore extends EventManager implements
 
 	/**
 	 * Return the IEclipsePreferences node associated with this store.
-	 *
+	 * 
 	 * @return the preference node for this store
 	 */
 	IEclipsePreferences getStorePreferences() {
@@ -230,7 +231,7 @@ public class ScopedPreferenceStore extends EventManager implements
 
 	/**
 	 * Return the default IEclipsePreferences for this store.
-	 *
+	 * 
 	 * @return this store's default preference node
 	 */
 	private IEclipsePreferences getDefaultPreferences() {
@@ -252,7 +253,7 @@ public class ScopedPreferenceStore extends EventManager implements
 	 * Whether or not the default context should be included in the resulting
 	 * list is specified by the <code>includeDefault</code> parameter.
 	 * </p>
-	 *
+	 * 
 	 * @param includeDefault
 	 *            <code>true</code> if the default context should be included
 	 *            and <code>false</code> otherwise
@@ -298,7 +299,7 @@ public class ScopedPreferenceStore extends EventManager implements
 	 * The defaultContext will be added to the end of this list automatically
 	 * and <em>MUST NOT</em> be included by the user.
 	 * </p>
-	 *
+	 * 
 	 * @param scopes
 	 *            a list of scope contexts to use when searching, or
 	 *            <code>null</code>
@@ -408,7 +409,7 @@ public class ScopedPreferenceStore extends EventManager implements
 	 * Return the string value for the specified key. Look in the nodes which
 	 * are specified by this object's list of search scopes. If the value does
 	 * not exist then return <code>null</code>.
-	 *
+	 * 
 	 * @param key
 	 *            the key to search with
 	 * @return String or <code>null</code> if the value does not exist.
@@ -542,7 +543,7 @@ public class ScopedPreferenceStore extends EventManager implements
 				dirty = true;
 				firePropertyChangeEvent(name, oldValue, defaultValue);
 			}
-
+				
 		} finally {
 			silentRunning = false;// Restart listening to preferences
 		}
@@ -604,7 +605,8 @@ public class ScopedPreferenceStore extends EventManager implements
 				getStorePreferences().putInt(name, value);
 			}
 			dirty = true;
-			firePropertyChangeEvent(name, Integer.valueOf(oldValue), Integer.valueOf(value));
+			firePropertyChangeEvent(name, new Integer(oldValue), new Integer(
+					value));
 		} finally {
 			silentRunning = false;// Restart listening to preferences
 		}
