@@ -24,6 +24,11 @@ public class StringToCharacterValidatorTest extends TestCase {
 	private StringToCharacterValidator validator;
 	private StringToCharacterValidator primitiveValidator;
 
+	/*
+	 * (non-Javadoc)
+	 *
+	 * @see junit.framework.TestCase#setUp()
+	 */
 	@Override
 	protected void setUp() throws Exception {
 		super.setUp();
@@ -56,7 +61,7 @@ public class StringToCharacterValidatorTest extends TestCase {
 	}
 
 	public void testNonStringIsInvalid() throws Exception {
-		assertFalse(primitiveValidator.validate(Integer.valueOf(4)).isOK());
+		assertFalse(primitiveValidator.validate(new Integer(4)).isOK());
 	}
 
 	public void testLongerThanOneCharacterIsInvalid() throws Exception {
